--- a/index.html
+++ b/index.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">k
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="font-inter">
+    <nav class="flex align">
+      <div>
+        <img src="assets/logo-navbar.png" alt="" />
+      </div>
+      <div>
+        <button>Features</button>
+        <button>How It Works</button>
+        <button>Why It's Different</button>
+      </div>
+      <div>
+        <button class="green-btn">Get Early Access</button>
+      </div>
+    </nav>
+
+    <section class="hero bg-img">
+      <img src="assets/hero-bg.png" alt="" />
+      <div class="bg-text flex-2 center">
+        <button class="white-btn">Early Access Open Now</button>
+        <h2 class="hero-2">
+          <span class="white-font">Structured Thinking,</span><br />
+          <span class="green-font">Not Just Note-Taking.</span>
+        </h2>
+        <p class="white-font">
+          A private space to store notes, links, and learning summaries —
+          designed to <br />
+          help you think clearly, connect ideas, and turn learning into
+          long-term knowledge.
+        </p>
+        <div class="flex gap-1">
+          <button class="green-btn">Start Building Your Vault</button>
+          <button class="btn-bg">See How It Works</button>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h1>Notes Don't Fail, Structure Does.</h1>
+      <p>
+        You're not bad at learning. Your tools just weren't built for how
+        knowledge actually works.
+      </p>
+      <div>
+        <div>
+          <img src="assets/Vector.png" alt="" />
+          <h2>Scattered notes</h2>
+          <p>
+            Your ideas live in 10 different apps,<br />
+            none of them connected.
+          </p>
+        </div>
+        <div>
+          <img src="assets/Bookmarks.png" alt="" />
+          <h2>Bookmark overload</h2>
+          <p>
+            Hundreds of saved links you'll never <br />
+            revisit or remember.
+          </p>
+        </div>
+        <div>
+          <img src="assets/Brain.png" alt="" />
+          <h2>No idea connections</h2>
+          <p>
+            Insights stay isolated, never <br />
+            building into bigger understanding.
+          </p>
+        </div>
+        <div>
+          <img src="assets/Info.png" alt="" />
+          <h2>Forgetting what you learned</h2>
+          <p>
+            Knowledge fades because there's <br />
+            no system to retain it.
+          </p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
