--- a/index.html
+++ b/index.html
@@ -48,41 +48,41 @@
       </div>
     </section>
 
-    <section>
-      <h1>Notes Don't Fail, Structure Does.</h1>
-      <p>
+    <section class="flex-3 center margin">
+      <h1 class="font-48">Notes Don't Fail, Structure Does.</h1>
+      <p class="gray-font">
         You're not bad at learning. Your tools just weren't built for how
         knowledge actually works.
       </p>
-      <div>
-        <div>
-          <img src="assets/Vector.png" alt="" />
+      <div class="flex gap-2 center">
+        <div class="flex-3 center">
+          <img class="card-img" src="assets/Vector.png" alt="" />
           <h2>Scattered notes</h2>
-          <p>
+          <p class="gray-font">
             Your ideas live in 10 different apps,<br />
             none of them connected.
           </p>
         </div>
-        <div>
-          <img src="assets/Bookmarks.png" alt="" />
+        <div class="flex-3 center">
+          <img class="card-img" src="assets/Bookmarks.png" alt="" />
           <h2>Bookmark overload</h2>
-          <p>
+          <p class="gray-font">
             Hundreds of saved links you'll never <br />
             revisit or remember.
           </p>
         </div>
-        <div>
-          <img src="assets/Brain.png" alt="" />
+        <div class="flex-3 center">
+          <img class="card-img" src="assets/Brain.png" alt="" />
           <h2>No idea connections</h2>
-          <p>
+          <p class="gray-font">
             Insights stay isolated, never <br />
             building into bigger understanding.
           </p>
         </div>
-        <div>
-          <img src="assets/Info.png" alt="" />
+        <div class="flex-3 center">
+          <img class="card-img" src="assets/Info.png" alt="" />
           <h2>Forgetting what you learned</h2>
-          <p>
+          <p class="gray-font">
             Knowledge fades because there's <br />
             no system to retain it.
           </p>
