--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         You're not bad at learning. Your tools just weren't built for how
         knowledge actually works.
       </p>
-      <div class="flex gap-2 center">
+      <div class="flex gap-3 center">
         <div class="flex-3 center">
           <img class="card-img" src="assets/Vector.png" alt="" />
           <h2>Scattered notes</h2>
@@ -87,6 +87,44 @@
             no system to retain it.
           </p>
         </div>
+      </div>
+    </section>
+
+    <section class="flex center gap-3">
+      <img src="assets/knowledge.png" alt="" />
+      <div>
+        <div>
+          <p class="green-font">THE SOLUTION</p>
+          <h1 class="font-48">
+            Your Second Brain, <br />
+            Structured By Design.
+          </h1>
+          <p class="gray-font">
+            Personal Knowledge Vault isn't another note-taking app. z <br />
+            It's a thinking environment where every note, link, and summary
+            <br />
+            becomes part of an interconnected web of understanding.
+          </p>
+
+
+      <div class="flex-4">
+        <div class="flex center-2 gap-4">
+          <img class="check" src="assets/CheckCircle.png" alt="" />
+          <p>Capture ideas with structure built-in from day one</p>
+        </div>
+        <div class="flex center-2 gap-4">
+          <img class="check" src="assets/CheckCircle.png" alt="" />
+          <p>Connect related concepts automatically as you write</p>
+        </div>
+        <div class="flex center-2 gap-4">
+          <img class="check" src="assets/CheckCircle.png" alt="" />
+          <p>Build lasting knowledge through reflection prompts</p>
+        </div>
+        <div class="flex center-2 gap-4">
+          <img class="check" src="assets/CheckCircle.png" alt="" />
+          <p>Find anything instantly with semantic search</p>
+        </div>
+      </div>
       </div>
     </section>
   </body>
