--- a/index.html
+++ b/index.html
@@ -127,5 +127,13 @@
       </div>
       </div>
     </section>
+
+    <section class="bg-color flex-2 center">
+        <h1 class="font-48">Ready To Think More Clearly?</h1>
+        <p class="gray-font">Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
+        <button class="green-btn">Get Early Access</button>
+        <p class="gray-font">Free during early access • No credit card needed</p>
+    </section>  
+
   </body>
 </html>
