--- a/index.html
+++ b/index.html
@@ -135,5 +135,19 @@
         <p class="gray-font">Free during early access • No credit card needed</p>
     </section>  
 
+    <footer class="footer-bg margin">
+        <div class="flex-5 between padding">
+        <img src="assets/logo-footer.png" alt="">
+        <div>
+            <p class="white-font ">Social Links</p>
+            <img src="assets/x.png" alt="">
+            <img src="assets/f.png" alt="">
+            <img src="assets/li.png" alt="">
+        </div>
+        </div>
+
+        <p class="white-font flex center padding">© 2026 Personal Knowledge Vault. All rights reserved.</p>
+    </footer>
+
   </body>
 </html>
